# MyBRVM

./: LICENSE  MANIFEST.in  README.md  command  list.txt  pyproject.toml  pyproject1.toml  setup.py.txt  tests.py
src/marketflow/: __db_manager__.py  __init__.py  market_data.py  market_information.py  market_registry.py  market_ticker.py  tools.py
src/marketflow/__data__/: database.db
src/marketflow/__marketconfig__/dataextraction/: brvm_data.py
src/marketflow/__marketconfig__/tickerextraction/: brvm_ticker.py  bvc_ticker.py
src/marketflow/class/: market.py
