[project]
name = "marketflow"
version = "1.1.2"
description = "Access to African, American, European and Asian market data for financial analysis, scientific study and to provide a decision-making basis to investors."
authors = [
    {name = "ODJO OLABIYI AUREL GEOFFROY",email = "xgeosoft@gmail.com"}
]
license = "MIT"
readme = "README.md"
packages = [{ include = "marketflow", from = "src" }]

homepage = "https://github.com/xgeosoft/marketflow"
repository = "https://github.com/xgeosoft/marketflow"
keywords = ["finance", "analysis","raw data", "market","evaluation"]


requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2)",
    "requests (>=2.32.5)",
    "numpy (>=2.3.3)",
    "pandas (>=2.3.2)",
    "tabulate (>=0.9.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
marketflow = ["__data__/*.db"]