[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketflow"
version = "1.1.90"
description = "Access to African, American, European and Asian market data for financial analysis."
readme = "README.md"
authors = [{name = "ODJO OLABIYI AUREL GEOFFROY", email = "xgeosoft@gmail.com"}]
keywords = ["finance", "analysis", "analytics", "statistics", "raw data", "market", "evaluation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.31.0",
    "numpy>=1.9.0",
    "pandas>=2.3.0",
    "tabulate>=0.9.0",
    "certifi>=2025.1.1"
]

[project.urls]
Homepage = "https://github.com/xgeosoft/marketflow"

# Setuptools-specific configuration for src-layout and package data
[tool.setuptools]
# Indique que tous les packages sont trouvés sous le répertoire 'src'
package-dir = {"" = "src"}
# On maintient 'include-package-data = true' pour les fichiers gérés par SCM

[tool.setuptools.packages.find]
# Recherche le package 'marketflow' à l'intérieur du répertoire 'src'
where = ["src"]
# On exclut les répertoires de tests
exclude = ["tests*"]

[tool.setuptools.package-data]
# Spécifie les fichiers de données à inclure dans le package marketflow/
marketflow = ["__data__/*.db"]